--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,5 @@
 compile.on.save=true
+file.reference.jcalendar-1.4.jar=C:\\Users\\ginku\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.mssql-jdbc-11.2.2.jre17.jar=C:\\Users\\ginku\\Downloads\\sqljdbc_11.2.2.0_enu\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.2.jre17.jar
+file.reference.TimingFramework-0.55.jar=C:\\Users\\ginku\\Downloads\\swing-notification-main\\swing-notification-main\\TimingFramework-0.55.jar
 user.properties.file=C:\\Users\\ACER\\AppData\\Roaming\\NetBeans\\14\\build.properties
