--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,26 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CNPM_PTITHCM
 excludes=
 file.reference.jcalendar-1.4.jar=..\\..\\..\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\ginku\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=..\\..\\..\\Downloads\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-11.2.2.jre17.jar=..\\..\\..\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.2.jre17.jar
+file.reference.mssql-jdbc-11.2.2.jre17.jar-1=C:\\Users\\ginku\\Downloads\\sqljdbc_11.2.2.0_enu\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.2.jre17.jar
+file.reference.mssql-jdbc-11.2.2.jre17.jar-2=..\\..\\..\\Downloads\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.2.jre17.jar
+file.reference.TimingFramework-0.55.jar=..\\..\\Zalo Received Files\\CNPM2023\\TimingFramework-0.55.jar
+file.reference.TimingFramework-0.55.jar-1=C:\\Users\\ginku\\Downloads\\swing-notification-main\\swing-notification-main\\TimingFramework-0.55.jar
+file.reference.TimingFramework-0.55.jar-2=..\\..\\Zalo Received Files\\CNPM2023\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-11.2.2.jre17.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mssql-jdbc-11.2.2.jre17.jar-1}:\
+    ${file.reference.TimingFramework-0.55.jar-1}:\
+    ${file.reference.TimingFramework-0.55.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.mssql-jdbc-11.2.2.jre17.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
